# greentic-sorla-providers

./: Cargo.toml  README.md  coverage-policy.json
.codex/: PR-02-provider-sdk.md  PR-03-gtpack-generation.md  PR-05-sharepoint-placeholder.md  PR-06-rag-placeholder.md  repo_overview.md
.codex/done/: PR-01-generic-ontology-provider-contract.md  PR-01-provider-family-scaffold.md  PR-02-provider-pack-catalog-ontology-metadata.md  PR-03-foundationdb-ontology-indexes.md  PR-04-foundationdb-provider.md  PR-04-sharepoint-mock-generic-external-mapping.md  PR-05-rag-mock-ontology-scoped-evidence.md  PR-06-provider-compatibility-and-contract-versioning.md  PR-07-deterministic-ontology-provider-scenario.md  PR-07-provider-catalog.md  PR-08-provider-production-hardening.md
.github/workflows/: ci.yml  codex-security-fix.yml  codex-semver-fix.yml  coverage-nightly.yml  nightly-semver.yml  perf.yml  publish.yml  tag-on-version-bump.yml
.i18n/: translator-state.json
ci/: local_check.sh  provider-dependencies.json  publish_oci_artifacts.sh
crates/sorla-provider-catalog/: Cargo.toml  README.md
crates/sorla-provider-catalog-cli/: Cargo.toml  README.md
crates/sorla-provider-catalog-cli/src/: main.rs
crates/sorla-provider-catalog/src/: lib.rs
crates/sorla-provider-core/: Cargo.toml  README.md
crates/sorla-provider-core/benches/: perf.rs
crates/sorla-provider-core/src/: lib.rs  traits.rs  types.rs
crates/sorla-provider-core/tests/: perf_scaling.rs  perf_timeout.rs
crates/sorla-provider-pack/: Cargo.toml  README.md
crates/sorla-provider-pack-cli/: Cargo.toml  README.md
crates/sorla-provider-pack-cli/src/: main.rs
crates/sorla-provider-pack/src/: lib.rs
docs/: architecture.md  catalog.md  foundationdb-provider.md  ontology-compatibility.md  ontology-production-readiness.md  ontology-provider-contract.md  ontology-security.md  packs.md
docs/providers/: foundationdb-ontology-indexes.md  ontology-smoke-scenario.md  rag-mock-ontology-scoped-evidence.md  rag-mock.md  sharepoint-mock-entity-linking.md  sharepoint-mock.md
examples/generated-catalog/: provider-catalog.json
examples/generated-packs/: index.json
examples/generated-packs/greentic-sorla-provider-foundationdb/: greentic-sorla-provider-foundationdb.gtpack.json  manifest.json
examples/generated-packs/greentic-sorla-provider-foundationdb/schemas/: provider-config.schema.json
examples/generated-packs/greentic-sorla-provider-rag-mock/: greentic-sorla-provider-rag-mock.gtpack.json  manifest.json
examples/generated-packs/greentic-sorla-provider-rag-mock/schemas/: provider-config.schema.json
examples/generated-packs/greentic-sorla-provider-sharepoint-mock/: greentic-sorla-provider-sharepoint-mock.gtpack.json  manifest.json
examples/generated-packs/greentic-sorla-provider-sharepoint-mock/schemas/: provider-config.schema.json
i18n/: ay.json
providers/provider-foundationdb/: Cargo.toml  README.md
providers/provider-foundationdb/src/: lib.rs
providers/provider-rag-mock/: Cargo.toml  README.md
providers/provider-rag-mock/src/: lib.rs
providers/provider-sharepoint-mock/: Cargo.toml  README.md
providers/provider-sharepoint-mock/src/: lib.rs
tools/: i18n.sh
xtask/: Cargo.toml
xtask/src/: main.rs
