[workspace]
members = [
  "crates/sorla-provider-core",
  "crates/sorla-provider-pack",
  "crates/sorla-provider-catalog",
  "crates/sorla-provider-pack-cli",
  "crates/sorla-provider-catalog-cli",
  "providers/provider-foundationdb",
  "providers/provider-sharepoint-mock",
  "providers/provider-rag-mock",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greenticai/greentic-sorla-providers"
homepage = "https://github.com/greenticai/greentic-sorla-providers"
documentation = "https://docs.rs/greentic-sorla-providers"
description = "Provider family workspace for Greentic SoRLa."

[workspace.dependencies]
criterion = "0.8"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sorla-provider-core = { path = "crates/sorla-provider-core", version = "0.1.0" }
sorla-provider-pack = { path = "crates/sorla-provider-pack", version = "0.1.0" }
sorla-provider-catalog = { path = "crates/sorla-provider-catalog", version = "0.1.0" }
provider-foundationdb = { path = "providers/provider-foundationdb", version = "0.1.0" }
provider-sharepoint-mock = { path = "providers/provider-sharepoint-mock", version = "0.1.0" }
provider-rag-mock = { path = "providers/provider-rag-mock", version = "0.1.0" }
