[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Repository automation for independent SoRLa provider versions and releases."
publish = false

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
