[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Repository automation for independent SoRLa provider versions and releases."
publish = false

[dependencies]
provider-foundationdb = { workspace = true }
provider-rag-mock = { workspace = true }
provider-sharepoint-mock = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sorla-provider-catalog = { workspace = true }
sorla-provider-core = { workspace = true }
