[package]
name = "sorla-provider-catalog-cli"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for generating deterministic SoRLa provider catalog artifacts."
readme = "README.md"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sorla-provider-catalog = { workspace = true }

