[package]
name = "sorla-provider-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Generated provider catalog types for SoRLa discovery."
readme = "README.md"
publish = false
keywords = ["greentic", "sorla", "provider", "catalog"]
categories = ["data-structures", "config"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]

[dependencies]
serde = { workspace = true }
sorla-provider-core = { path = "../sorla-provider-core", version = "0.1.0" }
sorla-provider-pack = { path = "../sorla-provider-pack", version = "0.1.0" }
serde_json = { workspace = true }
