[package]
name = "sorla-provider-pack"
version.workspace = true
edition.workspace = true
rust-version = "1.94"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Canonical SoRLa provider pack manifest model."
readme = "README.md"
publish = false
keywords = ["greentic", "sorla", "provider", "pack"]
categories = ["data-structures", "config"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sorla-provider-core = { path = "../sorla-provider-core", version = ">=1.1.0-dev, <1.2.0-0" }
thiserror = { workspace = true }
